[style] fixed sm page overflow problem

--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -2,7 +2,7 @@
 
 #header {
 	width: 100vw;
-	height: 72px;
+	height: 70px;
 	border-bottom: 1.2px solid black;
 	display: flex;
 	flex-direction: row;
